product page - mobile view done

--- a/src/pages/ear-one.html
+++ b/src/pages/ear-one.html
@@ -836,8 +836,6 @@
             </p>
             <p class="product__price">$99.00</p>
             <div class="product__color-wrap">
-              <!-- <div class="product__button-wrap">
-              </div> -->
               <button class="button color__button" id="button-black">
                 Black
               </button>
@@ -874,6 +872,7 @@
                   </p>
                 </div>
               </div>
+
               <!-- slide 2 -->
               <div
                 class="swiper-slide description__detail-swiper-slide slide__two"
@@ -895,6 +894,7 @@
                   </p>
                 </div>
               </div>
+
               <!-- slide 3 -->
               <div
                 class="swiper-slide description__detail-swiper-slide slide__three"
@@ -917,6 +917,7 @@
                   </p>
                 </div>
               </div>
+
               <!-- slide 4 -->
               <div
                 class="swiper-slide description__detail-swiper-slide slide__four"
@@ -955,53 +956,53 @@
               <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
             </button>
             <div class="accordion__content dimensions__content">
-              <!--  -->
-              <div class="dimensions__wrap">
+              <div class="dimensions-wrap">
                 <h3 class="dimensions__title">Ear Bud</h3>
                 <div class="detail-wrap">
-                  <div class="standards">
-                    <p class="standard">Height:</p>
-                    <p class="standard">Width:</p>
-                    <p class="standard">Depth:</p>
-                    <p class="standard">Weight:</p>
-                  </div>
-                  <div class="values">
-                    <p class="value">28,9 MM (1.13 IN)</p>
-                    <p class="value">21,5 MM (0.83 IN)</p>
-                    <p class="value">23,5 MM (0.91 IN)</p>
-                    <p class="value">4,7 GRAMS (0.16 OZ)</p>
-                  </div>
+                  <p class="standard">Height:</p>
+                  <p class="value">28,9 MM (1.13 IN)</p>
+                </div>
+                <div class="detail-wrap">
+                  <p class="standard">Width:</p>
+                  <p class="value">21,5 MM (0.83 IN)</p>
+                </div>
+                <div class="detail-wrap">
+                  <p class="standard">Depth:</p>
+                  <p class="value">23,5 MM (0.91 IN)</p>
+                </div>
+                <div class="detail-wrap">
+                  <p class="standard">Weight:</p>
+                  <p class="value">4,7 GRAMS (0.16 OZ)</p>
                 </div>
               </div>
-              <!--  -->
               <div class="dimensions__image-warp">
                 <img src="../../static/images/dimension-1.png" alt="ear bud" />
               </div>
-              <!--  -->
               <div class="dimensions-wrap">
                 <h3 class="dimensions__title">Case</h3>
                 <div class="detail-wrap">
-                  <div class="standards">
-                    <p class="standard">Height:</p>
-                    <p class="standard">Width:</p>
-                    <p class="standard">Depth:</p>
-                    <p class="standard">Weight:</p>
-                  </div>
-                  <div class="values">
-                    <p class="value">58,6 MM (2.30 IN)</p>
-                    <p class="value">58,6 MM (2.30 IN)</p>
-                    <p class="value">23,7 MM (0.93 IN)</p>
-                    <p class="value">57,4 GRAMS (2 OZ)</p>
-                  </div>
+                  <p class="standard">Height:</p>
+                  <p class="value">58,6 MM (2.30 IN)</p>
+                </div>
+                <div class="detail-wrap">
+                  <p class="standard">Width:</p>
+                  <p class="value">58,6 MM (2.30 IN)</p>
+                </div>
+                <div class="detail-wrap">
+                  <p class="standard">Depth:</p>
+                  <p class="value">23,7 MM (0.93 IN)</p>
+                </div>
+                <div class="detail-wrap">
+                  <p class="standard">Weight:</p>
+                  <p class="value">57,4 GRAMS (2 OZ)</p>
                 </div>
               </div>
-              <!--  -->
               <div class="dimensions__image-warp">
                 <img src="../../static/images/dimension-2.png" alt="case" />
               </div>
-              <!--  -->
             </div>
           </div>
+
           <!-- link 2 -->
           <div class="accordion__item">
             <button class="accordion__link">
@@ -1009,9 +1010,30 @@
               <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
             </button>
             <div class="accordion__content sound__content">
-              <p>content</p>
+              <div class="detail-wrap">
+                <p class="standard">Driver:</p>
+                <p class="value">11,6 mm Dynamic</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Diaphragm:</p>
+                <p class="value">Graphene</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Chamber size:</p>
+                <p class="value">0,34 CC</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Tuning:</p>
+                <p class="value">Teenage Engineering</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Codec:</p>
+                <p class="value">AAC and SBC</p>
+              </div>
+              <p class="standard">Hybrid Active Noise Cancellation</p>
             </div>
           </div>
+
           <!-- link 3 -->
           <div class="accordion__item">
             <button class="accordion__link">
@@ -1019,9 +1041,17 @@
               <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
             </button>
             <div class="accordion__content voice__content">
-              <p>content</p>
+              <div class="detail-wrap">
+                <p class="standard">3 High Definition Microphones.</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">
+                  AI Powered Environmental Noise Cancellation.
+                </p>
+              </div>
             </div>
           </div>
+
           <!-- link 4 -->
           <div class="accordion__item">
             <button class="accordion__link">
@@ -1029,9 +1059,22 @@
               <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
             </button>
             <div class="accordion__content battery__content">
-              <p>content</p>
+              <div class="detail-wrap">
+                <p class="standard">Full charge:</p>
+                <p class="value">
+                  Up to 34 hrs in the case (ANC Off); 24 hrs (ANC On)
+                </p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Charge Compatibility:</p>
+                <p class="value">
+                  ear (1) charges inside the case; ear (1) case charges with QI
+                  compatible wireless chargers or USB-C chargers
+                </p>
+              </div>
             </div>
           </div>
+
           <!-- link 5 -->
           <div class="accordion__item">
             <button class="accordion__link">
@@ -1039,9 +1082,16 @@
               <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
             </button>
             <div class="accordion__content customization__content">
-              <p>content</p>
+              <div class="detail-wrap">
+                <p class="standard">Controls:</p>
+                <p class="value">Customisable touch and slide</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Equalizer</p>
+              </div>
             </div>
           </div>
+
           <!-- link 6 -->
           <div class="accordion__item">
             <button class="accordion__link">
@@ -1049,9 +1099,21 @@
               <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
             </button>
             <div class="accordion__content features__content">
-              <p>content</p>
+              <div class="detail-wrap">
+                <p class="standard">In ear detection</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">iOS / Android app</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Fast pairing</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">IPX4 Splash Proof</p>
+              </div>
             </div>
           </div>
+
           <!-- link 7 -->
           <div class="accordion__item">
             <button class="accordion__link">
@@ -1059,9 +1121,15 @@
               <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
             </button>
             <div class="accordion__content compatibility__content">
-              <p>content</p>
+              <div class="detail-wrap">
+                <p class="standard">Android 5.1 and above</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">iOS 11 and above</p>
+              </div>
             </div>
           </div>
+
           <!-- link 8 -->
           <div class="accordion__item">
             <button class="accordion__link">
@@ -1069,9 +1137,17 @@
               <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
             </button>
             <div class="accordion__content connectivity__content">
-              <p>content</p>
+              <div class="detail-wrap">
+                <p class="standard">Bluetooth Version:</p>
+                <p class="value">v5.2</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Bluetooth Profiles:</p>
+                <p class="value">A2DP, AVRCP, HFP</p>
+              </div>
             </div>
           </div>
+
           <!-- link 9 -->
           <div class="accordion__item">
             <button class="accordion__link">
@@ -1079,13 +1155,27 @@
               <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
             </button>
             <div class="accordion__content box__content">
-              <p>content</p>
+              <div class="detail-wrap">
+                <p class="standard">Pair of earbuds with</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Ear tips in size S, M, L</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Wireless charging case</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">USB-C cable</p>
+              </div>
+              <div class="detail-wrap">
+                <p class="standard">Safety Information & User Guide</p>
+              </div>
             </div>
           </div>
-          <!-- end -->
         </div>
       </section>
     </main>
+
     <!--========== Footer ==========-->
     <footer class="footer">
       <div class="footer__content">
