product page - media query done

--- a/src/pages/ear-one.html
+++ b/src/pages/ear-one.html
@@ -856,20 +856,22 @@
               <div
                 class="swiper-slide description__detail-swiper-slide slide__one"
               >
-                <img
-                  class="detail-swiper-image image__one"
-                  src="../../static/images/product-detail-1.png"
-                  alt="product detail 1"
-                />
-                <div class="detail-swiper-text">
-                  <h3 class="detail-swiper-title">GUTSY</h3>
-                  <p class="detail-swiper-paragraph">
-                    Switch your look. Go minimal in original white or get moody
-                    with black. We believe in windows, not walls. We gave ear
-                    (1) transparent veneers to highlight and celebrate the
-                    craftsmanship underneath, and reveal the raw beauty of our
-                    technology.
-                  </p>
+                <div class="detail-swiper-container">
+                  <img
+                    class="detail-swiper-image image__one"
+                    src="../../static/images/product-detail-1.png"
+                    alt="product detail 1"
+                  />
+                  <div class="detail-swiper-text">
+                    <h3 class="detail-swiper-title">GUTSY</h3>
+                    <p class="detail-swiper-paragraph">
+                      Switch your look. Go minimal in original white or get
+                      moody with black. We believe in windows, not walls. We
+                      gave ear (1) transparent veneers to highlight and
+                      celebrate the craftsmanship underneath, and reveal the raw
+                      beauty of our technology.
+                    </p>
+                  </div>
                 </div>
               </div>
 
@@ -877,21 +879,24 @@
               <div
                 class="swiper-slide description__detail-swiper-slide slide__two"
               >
-                <img
-                  class="detail-swiper-image image__two"
-                  src="../../static/images/product-detail-2.png"
-                  alt="product detail 1"
-                />
-                <div class="detail-swiper-text">
-                  <h3 class="detail-swiper-title">
-                    PURE SOUND, PRECISELY TUNED
-                  </h3>
-                  <p class="detail-swiper-paragraph">
-                    We’ve cleared the way for superb sound, voice, and
-                    connectivity. An 11.6mm dynamic driver and spacious air
-                    chamber provide advanced bass, mid, and treble performance.
-                    All tuned by the audiophiles at teenage engineering.
-                  </p>
+                <div class="detail-swiper-container">
+                  <img
+                    class="detail-swiper-image image__two"
+                    src="../../static/images/product-detail-2.png"
+                    alt="product detail 1"
+                  />
+                  <div class="detail-swiper-text">
+                    <h3 class="detail-swiper-title">
+                      PURE SOUND, PRECISELY TUNED
+                    </h3>
+                    <p class="detail-swiper-paragraph">
+                      We’ve cleared the way for superb sound, voice, and
+                      connectivity. An 11.6mm dynamic driver and spacious air
+                      chamber provide advanced bass, mid, and treble
+                      performance. All tuned by the audiophiles at teenage
+                      engineering.
+                    </p>
+                  </div>
                 </div>
               </div>
 
@@ -899,22 +904,22 @@
               <div
                 class="swiper-slide description__detail-swiper-slide slide__three"
               >
-                <div class="detail-swiper-image-container">
+                <div class="detail-swiper-container">
                   <img
                     class="detail-swiper-image image__three"
                     src="../../static/images/product-detail-5.jpg"
                     alt="product detail 1"
                   />
-                </div>
-                <div class="detail-swiper-text">
-                  <h3 class="detail-swiper-title">SOUND OF SILENCE</h3>
-                  <p class="detail-swiper-paragraph">
-                    When you want peace and quiet, switch on active noise
-                    cancellation to capture and cancel unwanted background
-                    noise. Great for airplanes or at the office. When you want
-                    to let the world back in, transparent mode brings your
-                    surrounding noise back with just the touch of a button.
-                  </p>
+                  <div class="detail-swiper-text">
+                    <h3 class="detail-swiper-title">SOUND OF SILENCE</h3>
+                    <p class="detail-swiper-paragraph">
+                      When you want peace and quiet, switch on active noise
+                      cancellation to capture and cancel unwanted background
+                      noise. Great for airplanes or at the office. When you want
+                      to let the world back in, transparent mode brings your
+                      surrounding noise back with just the touch of a button.
+                    </p>
+                  </div>
                 </div>
               </div>
 
@@ -922,21 +927,24 @@
               <div
                 class="swiper-slide description__detail-swiper-slide slide__four"
               >
-                <img
-                  class="detail-swiper-image image__four"
-                  src="../../static/images/product-detail-6.jpg"
-                  alt="product detail 1"
-                />
-                <div class="detail-swiper-text">
-                  <h3 class="detail-swiper-title">
-                    PURE SOUND, PRECISELY TUNED
-                  </h3>
-                  <p class="detail-swiper-paragraph">
-                    We’ve cleared the way for superb sound, voice, and
-                    connectivity. An 11.6mm dynamic driver and spacious air
-                    chamber provide advanced bass, mid, and treble performance.
-                    All tuned by the audiophiles at teenage engineering.
-                  </p>
+                <div class="detail-swiper-container">
+                  <img
+                    class="detail-swiper-image image__four"
+                    src="../../static/images/product-detail-6.jpg"
+                    alt="product detail 1"
+                  />
+                  <div class="detail-swiper-text">
+                    <h3 class="detail-swiper-title">
+                      PURE SOUND, PRECISELY TUNED
+                    </h3>
+                    <p class="detail-swiper-paragraph">
+                      We’ve cleared the way for superb sound, voice, and
+                      connectivity. An 11.6mm dynamic driver and spacious air
+                      chamber provide advanced bass, mid, and treble
+                      performance. All tuned by the audiophiles at teenage
+                      engineering.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
