about page - mobile view - about hero

--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -76,7 +76,49 @@
     </header>
 
     <!--========== Main ==========-->
-    <main class="main"></main>
+    <main class="main">
+      <section class="about__hero">
+        <div class="about__hero-container">
+          <div class="about__hero-image-warp"></div>
+          <div class="about__hero-text-wrap">
+            <h1 class="about__hero-title">LET’S TALK ABOUT NOTHING</h1>
+            <div class="about__hero-line"></div>
+            <p class="about__hero-paragraph">
+              Imagine a world where all of your devices are seamlessly
+              connected. Tech that just works. That you don’t have to think
+              about. That feels like nothing (last one, we promise).
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <aside class="about__aside">
+        <nav class="about__aside-navigation">
+          <h3 class="about__aside-title">Nothing.</h3>
+          <ul class="about__aside-list">
+            <li class="about__aside-link"><a href="#about-us">About us.</a></li>
+            <li class="about__aside-link">
+              <a href="#about-story">Our story.</a>
+            </li>
+            <li class="about__aside-link">
+              <a href="#about-investors">Investors.</a>
+            </li>
+            <li class="about__aside-link">
+              <a href="#about-sustainability">Sustainability.</a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
+
+      <section class="about__us" id="about-us"></section>
+
+      <section class="about__story" id="about-story"></section>
+      <section class="about__investors" id="about-investors"></section>
+      <section
+        class="about__sustainability"
+        id="about-sustainability"
+      ></section>
+    </main>
 
     <!--========== Footer ==========-->
     <footer class="footer">
