about page - mobile view - about us

--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -94,7 +94,10 @@
 
       <aside class="about__aside">
         <nav class="about__aside-navigation">
-          <h3 class="about__aside-title">Nothing.</h3>
+          <div class="about__aside-title-wrap">
+            <h3 class="about__aside-title">Nothing.</h3>
+            <i class="bx bx-chevron-down about__aside-icon"></i>
+          </div>
           <ul class="about__aside-list">
             <li class="about__aside-link"><a href="#about-us">About us.</a></li>
             <li class="about__aside-link">
@@ -110,7 +113,28 @@
         </nav>
       </aside>
 
-      <section class="about__us" id="about-us"></section>
+      <section class="about__us" id="about-us">
+        <div class="about__us-container">
+          <h3 class="about__us-title">ABOUT US</h3>
+          <div class="about__us-paragraph-wrap">
+            <p class="about__us-paragraph">
+              We’re a London-based tech company on a mission to remove barriers
+              between people and technology.
+            </p>
+            <p class="about__us-paragraph">
+              To do this, we’re crafting intuitive, flawlessly connected
+              products that improve our lives without getting in the way. No
+              confusing tech-speak. No silly product names. Just artistry,
+              passion and trust. And products we’re proud to share with our
+              friends and family. Simple.
+            </p>
+            <p class="about__us-paragraph">
+              Because beautiful tech shouldn’t be complicated.
+            </p>
+          </div>
+          <div class="about__us-image"></div>
+        </div>
+      </section>
 
       <section class="about__story" id="about-story"></section>
       <section class="about__investors" id="about-investors"></section>
