home page - gsap, scroll magic animation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="./src/css/common.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
     <!--========== Icon ==========-->
     <link
       rel="stylesheet"
@@ -143,7 +144,7 @@
           </div>
 
           <!-- content -->
-          <div class="content">
+          <div class="content scroll__point">
             <div class="content__wrap">
               <div class="title">ear (1)</div>
               <div class="subtitle">SOUND OF CHANGE</div>
@@ -155,7 +156,7 @@
               <button class="ear__btn button">Buy now</button>
             </div>
 
-            <div class="image__container">
+            <div class="image__container scroll__point">
               <img
                 class="ear__image"
                 src="./static/images/home-two.jpg"
@@ -215,7 +216,7 @@
           </div>
 
           <!-- content -->
-          <div class="content">
+          <div class="content scroll__point">
             <div class="content__wrap">
               <div class="title">NOTHING</div>
               <div class="subtitle">ABOUT US</div>
@@ -227,7 +228,8 @@
               </div>
               <button class="about__btn button">Learn More</button>
             </div>
-            <div class="image__container">
+
+            <div class="image__container scroll__point">
               <img
                 class="about__image"
                 src="./static/images/home-one.jpg"
