--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -21,7 +21,7 @@
     <link rel="icon" href="../../static/favicon.ico" />
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="../css/common.css" />
-    <link rel="stylesheet" href="../css/about-us.css?ver=2" />
+    <link rel="stylesheet" href="../css/about-us.css" />
     <!--========== Icon ==========-->
     <link
       rel="stylesheet"
