--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -39,7 +39,7 @@
     ></script>
     <!--========== JavaScript ==========-->
     <script defer type="module" src="../js/common.js"></script>
-    <script defer type="module" src="../js/about-us.js?ver=3"></script>
+    <script defer type="module" src="../js/about-us.js"></script>
     <title>NOTHING</title>
   </head>
 
